--- a/test-output/old/Android/methods-alphabetical.html
+++ b/test-output/old/Android/methods-alphabetical.html
@@ -1,26 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Android</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6a9486">  <td>20/08/20 15:09:04</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Android_LandingScreen_TopNavigation.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.Android_LandingScreen_TopNavigation@3fd7a715]">&gt;&gt;AppLaunch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@413601558</td>   <td></td> </tr>
-<tr bgcolor="6a9486">  <td>20/08/20 15:31:47</td>   <td>1362566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Android_LandingScreen_TopNavigation.ChannelGuide_LandingScreen(java.lang.String)[pri:9, instance:com.zee5.ApplicasterScripts.Android_LandingScreen_TopNavigation@3fd7a715]">ChannelGuide_LandingScreen</td> 
-  <td>main@413601558</td>   <td></td> </tr>
-<tr bgcolor="6a9486">  <td>20/08/20 15:11:41</td>   <td>157020</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Android_LandingScreen_TopNavigation.Home_LandingScreen(java.lang.String, java.lang.String)[pri:1, instance:com.zee5.ApplicasterScripts.Android_LandingScreen_TopNavigation@3fd7a715]">Home_LandingScreen</td> 
-  <td>main@413601558</td>   <td></td> </tr>
-<tr bgcolor="6a9486">  <td>20/08/20 15:22:17</td>   <td>792507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Android_LandingScreen_TopNavigation.Kids_LandingScreen(java.lang.String)[pri:6, instance:com.zee5.ApplicasterScripts.Android_LandingScreen_TopNavigation@3fd7a715]">Kids_LandingScreen</td> 
-  <td>main@413601558</td>   <td></td> </tr>
-<tr bgcolor="6a9486">  <td>20/08/20 15:30:35</td>   <td>1290667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Android_LandingScreen_TopNavigation.LiveTV_landingScreen(java.lang.String)[pri:8, instance:com.zee5.ApplicasterScripts.Android_LandingScreen_TopNavigation@3fd7a715]">LiveTV_landingScreen</td> 
-  <td>main@413601558</td>   <td></td> </tr>
-<tr bgcolor="6a9486">  <td>20/08/20 15:10:37</td>   <td>93435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Android_LandingScreen_TopNavigation.Login(java.lang.String)[pri:0, instance:com.zee5.ApplicasterScripts.Android_LandingScreen_TopNavigation@3fd7a715]">Login</td> 
-  <td>main@413601558</td>   <td></td> </tr>
-<tr bgcolor="6a9486">  <td>20/08/20 15:15:04</td>   <td>359493</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Android_LandingScreen_TopNavigation.Movies_LandingScreen(java.lang.String, java.lang.String)[pri:3, instance:com.zee5.ApplicasterScripts.Android_LandingScreen_TopNavigation@3fd7a715]">Movies_LandingScreen</td> 
-  <td>main@413601558</td>   <td></td> </tr>
-<tr bgcolor="6a9486">  <td>20/08/20 15:28:42</td>   <td>1177963</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Android_LandingScreen_TopNavigation.Music_LandingScreen(java.lang.String)[pri:7, instance:com.zee5.ApplicasterScripts.Android_LandingScreen_TopNavigation@3fd7a715]">Music_LandingScreen</td> 
-  <td>main@413601558</td>   <td></td> </tr>
-<tr bgcolor="6a9486">  <td>20/08/20 15:19:48</td>   <td>644378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Android_LandingScreen_TopNavigation.Premium_LandingScreen(java.lang.String)[pri:4, instance:com.zee5.ApplicasterScripts.Android_LandingScreen_TopNavigation@3fd7a715]">Premium_LandingScreen</td> 
-  <td>main@413601558</td>   <td></td> </tr>
-<tr bgcolor="6a9486">  <td>20/08/20 15:32:00</td>   <td>1376196</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Android_LandingScreen_TopNavigation.Zee5Originals_LandingScreen(java.lang.String, java.lang.String)[pri:10, instance:com.zee5.ApplicasterScripts.Android_LandingScreen_TopNavigation@3fd7a715]">Zee5Originals_LandingScreen</td> 
-  <td>main@413601558</td>   <td></td> </tr>
-<tr bgcolor="6a9486">  <td>20/08/20 15:34:01</td>   <td>1496758</td> <td>&nbsp;</td><td title="&lt;&lt;Android_LandingScreen_TopNavigation.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.Android_LandingScreen_TopNavigation@3fd7a715]">&lt;&lt;tearDownApp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@413601558</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>20/08/26 15:59:33</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Android_MoreScreen.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.Android_MoreScreen@7f13d6e]">&gt;&gt;AppLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1652149987</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>20/08/26 16:00:20</td>   <td>46801</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Android_MoreScreen.MyReminders(java.lang.String)[pri:9, instance:com.zee5.ApplicasterScripts.Android_MoreScreen@7f13d6e]">MyReminders</td> 
+  <td>main@1652149987</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>20/08/26 16:01:10</td>   <td>97314</td> <td>&nbsp;</td><td title="&lt;&lt;Android_MoreScreen.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.Android_MoreScreen@7f13d6e]">&lt;&lt;tearDownApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1652149987</td>   <td></td> </tr>
 </table>
