--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Android">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Android" title="com.zee5.ApplicasterScripts.Android_MoreScreen" hash-for-method="MyReminders(NonSubscribedUser)">MyReminders(NonSubscribedUser)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Android" title="com.zee5.ApplicasterScripts.Android_MoreScreen" hash-for-method="MyWatchlist(NonSubscribedUser)">MyWatchlist(NonSubscribedUser)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Android -->
@@ -125,9 +125,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="MyReminders(NonSubscribedUser)">
-                  </a> <!-- MyReminders(NonSubscribedUser) -->
-                  <span class="method-name">MyReminders</span>
+                  <a name="MyWatchlist(NonSubscribedUser)">
+                  </a> <!-- MyWatchlist(NonSubscribedUser) -->
+                  <span class="method-name">MyWatchlist</span>
                   <span class="parameters">(NonSubscribedUser)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
@@ -145,50 +145,55 @@
 &lt;suite thread-count=&quot;1&quot; guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Android&quot;&gt;
   &lt;parameter name=&quot;searchModuleKeyword&quot; value=&quot;Kamali&quot;/&gt;
   &lt;parameter name=&quot;SubscribedUserWith15daysExpiryPassword&quot; value=&quot;123456&quot;/&gt;
-  &lt;parameter name=&quot;SubscribedPassword&quot; value=&quot;123456&quot;/&gt;
   &lt;parameter name=&quot;invalidSearchKeyword&quot; value=&quot;@$_-(;_+&quot;/&gt;
   &lt;parameter name=&quot;MovieName&quot; value=&quot;O God Ganesha 2&quot;/&gt;
-  &lt;parameter name=&quot;PromoCode&quot; value=&quot;PNB20&quot;/&gt;
   &lt;parameter name=&quot;RegisteredEmail&quot; value=&quot;zee5latest@gmail.com&quot;/&gt;
+  &lt;parameter name=&quot;searchKeyword1&quot; value=&quot;Paaru gets tipsy&quot;/&gt;
   &lt;parameter name=&quot;tabName1&quot; value=&quot;Home&quot;/&gt;
   &lt;parameter name=&quot;tabName2&quot; value=&quot;Movies&quot;/&gt;
   &lt;parameter name=&quot;tabName3&quot; value=&quot;ZEE5 Originals&quot;/&gt;
-  &lt;parameter name=&quot;searchKeyword&quot; value=&quot;Aditya praises paaru&quot;/&gt;
+  &lt;parameter name=&quot;validPhnNumber&quot; value=&quot;7892215214&quot;/&gt;
+  &lt;parameter name=&quot;SubscribedUserName&quot; value=&quot;zeetest998@test.com&quot;/&gt;
+  &lt;parameter name=&quot;UnRegisteredMobile&quot; value=&quot;8073661163&quot;/&gt;
+  &lt;parameter name=&quot;NonsubscribedUserName&quot; value=&quot;igstesting001@gmail.com&quot;/&gt;
+  &lt;parameter name=&quot;RSVODPassword&quot; value=&quot;ABCD1234&quot;/&gt;
+  &lt;parameter name=&quot;displayLanguageSelection2&quot; value=&quot;Marathi&quot;/&gt;
+  &lt;parameter name=&quot;NonsubscribedPassword&quot; value=&quot;igs@12345&quot;/&gt;
+  &lt;parameter name=&quot;runMode&quot; value=&quot;Suites&quot;/&gt;
+  &lt;parameter name=&quot;RegisteredMobilePassword&quot; value=&quot;User@123&quot;/&gt;
+  &lt;parameter name=&quot;NonsubscribedUserWithInActivePackPassword&quot; value=&quot;123456&quot;/&gt;
+  &lt;parameter name=&quot;RegisteredEmailPassword&quot; value=&quot;User@123&quot;/&gt;
+  &lt;parameter name=&quot;userType&quot; value=&quot;NonSubscribedUser&quot;/&gt;
+  &lt;parameter name=&quot;LastName&quot; value=&quot;UserZee&quot;/&gt;
+  &lt;parameter name=&quot;NonsubscribedUserWithNoTransactionPassword&quot; value=&quot;User@123&quot;/&gt;
+  &lt;parameter name=&quot;SubscribedPassword&quot; value=&quot;123456&quot;/&gt;
+  &lt;parameter name=&quot;PromoCode&quot; value=&quot;PNB20&quot;/&gt;
+  &lt;parameter name=&quot;searchKeyword&quot; value=&quot;Aditya praises Paaru&quot;/&gt;
   &lt;parameter name=&quot;RSVODUser&quot; value=&quot;9663128823&quot;/&gt;
   &lt;parameter name=&quot;otp1&quot; value=&quot;1&quot;/&gt;
   &lt;parameter name=&quot;displayLanguageSelection1&quot; value=&quot;English&quot;/&gt;
   &lt;parameter name=&quot;otp2&quot; value=&quot;2&quot;/&gt;
-  &lt;parameter name=&quot;validPhnNumber&quot; value=&quot;7892215214&quot;/&gt;
+  &lt;parameter name=&quot;NonsubscribedUserWithInActivePackUsername&quot; value=&quot;zeetestww@test.com&quot;/&gt;
   &lt;parameter name=&quot;runModule&quot; value=&quot;Suite&quot;/&gt;
-  &lt;parameter name=&quot;SubscribedUserName&quot; value=&quot;zeetest998@test.com&quot;/&gt;
   &lt;parameter name=&quot;searchcontent6&quot; value=&quot;Comedy Kiladigalu Championship - Episode 11&quot;/&gt;
   &lt;parameter name=&quot;validPassword&quot; value=&quot;User@123&quot;/&gt;
   &lt;parameter name=&quot;searchcontent5&quot; value=&quot;Comedy Kiladigalu Championship - Episode 10&quot;/&gt;
-  &lt;parameter name=&quot;UnRegisteredMobile&quot; value=&quot;8073661163&quot;/&gt;
+  &lt;parameter name=&quot;NonsubscribedUserWithNoTransactionUsername&quot; value=&quot;zeebuild@gmail.com&quot;/&gt;
   &lt;parameter name=&quot;partlySpeltSearchKeyword&quot; value=&quot;Kam&quot;/&gt;
   &lt;parameter name=&quot;otp3&quot; value=&quot;3&quot;/&gt;
   &lt;parameter name=&quot;searchcontent2&quot; value=&quot;Comedy Kiladigalu Championship - Episode 8&quot;/&gt;
-  &lt;parameter name=&quot;NonsubscribedUserName&quot; value=&quot;igstesting001@gmail.com&quot;/&gt;
   &lt;parameter name=&quot;otp4&quot; value=&quot;4&quot;/&gt;
   &lt;parameter name=&quot;searchcontent1&quot; value=&quot;Dil Bechara – Title Track&quot;/&gt;
   &lt;parameter name=&quot;searchcontent4&quot; value=&quot;Comedy Kiladigalu Championship - Episode 9&quot;/&gt;
   &lt;parameter name=&quot;searchcontent3&quot; value=&quot;Comedy Kiladigalu Championship - Episode 24&quot;/&gt;
   &lt;parameter name=&quot;loginThrough&quot; value=&quot;login&quot;/&gt;
   &lt;parameter name=&quot;regUserName&quot; value=&quot;igszeefive3@gmail.com&quot;/&gt;
-  &lt;parameter name=&quot;RSVODPassword&quot; value=&quot;ABCD1234&quot;/&gt;
   &lt;parameter name=&quot;FirstName&quot; value=&quot;Zee&quot;/&gt;
   &lt;parameter name=&quot;PrepaidCode&quot; value=&quot;Z5PWATI9WlD&quot;/&gt;
-  &lt;parameter name=&quot;displayLanguageSelection2&quot; value=&quot;Marathi&quot;/&gt;
-  &lt;parameter name=&quot;NonsubscribedPassword&quot; value=&quot;igs@12345&quot;/&gt;
-  &lt;parameter name=&quot;runMode&quot; value=&quot;Suites&quot;/&gt;
   &lt;parameter name=&quot;regPassword&quot; value=&quot;123456&quot;/&gt;
   &lt;parameter name=&quot;inValidPhnNumber&quot; value=&quot;7892215&quot;/&gt;
   &lt;parameter name=&quot;VideoQuality&quot; value=&quot;Data saver&quot;/&gt;
-  &lt;parameter name=&quot;RegisteredMobilePassword&quot; value=&quot;User@123&quot;/&gt;
-  &lt;parameter name=&quot;RegisteredEmailPassword&quot; value=&quot;User@123&quot;/&gt;
   &lt;parameter name=&quot;SubscribedUserWith15daysExpiryUsername&quot; value=&quot;testzee5_4@gmail.com&quot;/&gt;
-  &lt;parameter name=&quot;userType&quot; value=&quot;NonSubscribedUser&quot;/&gt;
-  &lt;parameter name=&quot;LastName&quot; value=&quot;UserZee&quot;/&gt;
   &lt;parameter name=&quot;RegisteredMobile&quot; value=&quot;7892215214&quot;/&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;com.extent.ExtentReporter&quot;/&gt;
@@ -237,14 +242,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'MyReminders')
+data.setCell(0, 1, 'MyWatchlist')
 data.setCell(0, 2, 'com.zee5.ApplicasterScripts.Android_MoreScreen')
-data.setCell(0, 3, 48577);
+data.setCell(0, 3, 99836);
 window.suiteTableData['Android']= { tableData: data, tableDiv: 'times-div-Android'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 48 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Android">
               </div> <!-- times-div-Android -->
             </div> <!-- times-div -->
@@ -276,12 +281,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">MyReminders(NonSubscribedUser)</span>
-                <span class="method-start">46808 ms</span>
+                <span class="method-name">MyWatchlist(NonSubscribedUser)</span>
+                <span class="method-start">245793 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDownApp</span>
-                <span class="method-start">97321 ms</span>
+                <span class="method-start">346748 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
