--- a/test-output/old/Android/toc.html
+++ b/test-output/old/Android/toc.html
@@ -8,9 +8,9 @@
 <h3><p align="center">Results for<br/><em>Android</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>1 test</td>
-<td><a target='mainFrame' href='classes.html'>1 class</a></td>
-<td>2 methods:<br/>
+<td>19 tests</td>
+<td><a target='mainFrame' href='classes.html'>19 classes</a></td>
+<td>88 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
@@ -20,10 +20,154 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Android_AppLaunch (0/4/0)</td><td valign='top' align='right'>
+  <a href='Android_AppLaunch.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Android_BeforeTV (0/2/0)</td><td valign='top' align='right'>
+  <a href='Android_BeforeTV.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Android_ClubPack (0/5/0)</td><td valign='top' align='right'>
+  <a href='Android_ClubPack.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Android_Consumption_Screen (0/6/0)</td><td valign='top' align='right'>
+  <a href='Android_Consumption_Screen.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Android_Downloads (0/2/0)</td><td valign='top' align='right'>
+  <a href='Android_Downloads.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Android_ExitPop (0/3/0)</td><td valign='top' align='right'>
+  <a href='Android_ExitPop.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Android_LandingScreen_BottomNavigation (0/5/0)</td><td valign='top' align='right'>
+  <a href='Android_LandingScreen_BottomNavigation.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Android_LandingScreen_TopNavigation (0/11/0)</td><td valign='top' align='right'>
+  <a href='Android_LandingScreen_TopNavigation.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Android_ListingScreen (0/3/0)</td><td valign='top' align='right'>
+  <a href='Android_ListingScreen.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Android_MoreScreen (0/15/0)</td><td valign='top' align='right'>
+  <a href='Android_MoreScreen.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Android_Onboarding_Suite2 (0/6/0)</td><td valign='top' align='right'>
+  <a href='Android_Onboarding_Suite2.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Android_Onboarding_Suite3 (0/3/0)</td><td valign='top' align='right'>
+  <a href='Android_Onboarding_Suite3.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Android_PlayerScreen (0/4/0)</td><td valign='top' align='right'>
+  <a href='Android_PlayerScreen.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Android_Search (0/5/0)</td><td valign='top' align='right'>
+  <a href='Android_Search.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Android_Settings (0/2/0)</td><td valign='top' align='right'>
+  <a href='Android_Settings.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Android_Subscription (0/2/0)</td><td valign='top' align='right'>
+  <a href='Android_Subscription.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Android_UserSessionManagement (0/8/0)</td><td valign='top' align='right'>
+  <a href='Android_UserSessionManagement.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>DeepLinkValidation (0/1/0)</td><td valign='top' align='right'>
+  <a href='DeepLinkValidation.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Android_MoreScreen (2/0/0)</td><td valign='top' align='right'>
-  <a href='Android_MoreScreen.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Android_Onboarding_Suite1 (1/0/0)</td><td valign='top' align='right'>
+  <a href='Android_Onboarding_Suite1.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
